Istio-Deployments/Header-Routings/04-canary-header-reroute-virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-virtual-services
spec:
  hosts:
  - "*"
  gateways:
  - http-murali-rest-gateway                      # 1
  http:
    - match:
      - headers:  # IF
          x-murali-header:
            exact: muralicanary50Vs50               #If Header name <x-murali-header> exists in the request and is equalto muralicanary50Vs50, it goes thru this route
      route:
        - destination:
            host: currency-conversion
            subset: v1MiniKube  # The name defined in destination rule
          weight: 50
        - destination:
            host: currency-conversion
            subset: v2MiniKube  # The name defined in destination rule
          weight: 50
    - match:          
      - headers:  # IF
          x-murali-header:
            exact: muralicanary100V1               #If Header name <x-murali-header> exists in the request and is equalto muralicanary100V1, it goes thru this route
      route:
        - destination:
            host: currency-conversion
            subset: v1MiniKube  # The name defined in destination rule
          weight: 100
    - match:          
      - headers:  # IF
          x-murali-header:
            exact: muralicanary100V2               #If Header name <x-murali-header> exists in the request and is equalto muralicanary100V2, it goes thru this route
      route:
        - destination:
            host: currency-conversion
            subset: v2MiniKube  # The name defined in destination rule
          weight: 100
    - match:          
      - uri:
          prefix: /currency-conversion
      route:
        - destination:
            host: currency-conversion
            subset: v2MiniKube  # The name defined in destination rule
          weight: 100          
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: currency-conversion-destination-rules
spec:
  host: currency-conversion # Service
  namespace: default
  subsets:
    - name: v1MiniKube
      labels:
        version: v1MiniKube ## Find Pods with label v1MiniKube
    - name: v2MiniKube
      labels:
        version: v2MiniKube ## Find Pods with label v2MiniKube
